--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,14 +16,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with: 
-        fetch_depth: 0
+        fetch-depth: 0
     - name: Docker login
       env: 
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
         echo "Iniciando Login"
-        docker login -u $DOCKER_USER - p $DOCKER_PASSWORD
-        echo "Fin del Login"
+        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+        echo "Fin del Login" 
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
