--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,5 +25,12 @@ jobs:
         echo "Iniciando Login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "Fin del Login" 
+    - name: Build Docker Image
+      run: |
+        docker container run zoebarriosarg/docker-grahpql:0.0.2 .
+    - name: Push Docker Image
+      run: |
+        docker push -t zoebarriosarg/docker-grahpql:0.0.2
+        
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
