--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,7 @@ jobs:
         echo "Fin del Login" 
     - name: Build Docker Image
       run: |
-        docker container run zoebarriosarg/docker-grahpql:0.0.2 .
+        docker build -t zoebarriosarg/docker-grahpql:0.0.2 .
     - name: Push Docker Image
       run: |
         docker push -t zoebarriosarg/docker-grahpql:0.0.2
