--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,7 +30,7 @@ jobs:
         docker build -t zoebarriosarg/docker-grahpql:0.0.2 .
     - name: Push Docker Image
       run: |
-        docker push -t zoebarriosarg/docker-grahpql:0.0.2
+        docker push zoebarriosarg/docker-grahpql:0.0.2
         
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
