--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,9 +28,11 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t zoebarriosarg/docker-grahpql:0.0.2 .
+        docker build -t zoebarriosarg/docker-grahpql .
     - name: Push Docker Image
       run: |
         docker push zoebarriosarg/docker-grahpql:0.0.2
-        
+        docker push zoebarriosarg/docker-grahpql
+
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
