--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,22 +17,35 @@ jobs:
       uses: actions/checkout@v4
       with: 
         fetch-depth: 0
+
+    - name: Git Semantic Version
+      uses: PaulHatch/semantic-version@v4.0.3
+      with:
+       major_pattern: "mayor:"
+       minor_pattern: "feat:"
+       format: "${major}.${minor}.${patch}-prerelease${increment}"
+      id: version
+      
     - name: Docker login
       env: 
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
         echo "Iniciando Login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "Fin del Login" 
+        
     - name: Build Docker Image
+      env: 
+        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
-        docker build -t zoebarriosarg/docker-grahpql:0.0.2 .
+        docker build -t zoebarriosarg/docker-grahpql:$NEW_VERSION .
         docker build -t zoebarriosarg/docker-grahpql .
     - name: Push Docker Image
+      env: 
+        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
-        docker push zoebarriosarg/docker-grahpql:0.0.2
+        docker push zoebarriosarg/docker-grahpql:$NEW_VERSION
         docker push zoebarriosarg/docker-grahpql
 
-    # - name: Build the Docker image
-    #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
